# package-list

./: .ghci  .gitignore  .travis.yml  generate-nixpkgs-haskell-package-list.cabal  list-haskellng.nix  package-list.hs  package.yaml  stack.yaml
src/: Main.hs
